--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="grid-item">1</div>
       <div class="grid-item">2</div>
       <div class="grid-item">3</div>
+      <div class="grid-item">4</div>
     </div>
   </div>
 </body>
