--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div class="grid-item">2</div>
       <div class="grid-item">3</div>
       <div class="grid-item">4</div>
+      <div class="grid-item">5</div>
+      <div class="grid-item">6</div>
+      <div class="grid-item">7</div>
     </div>
   </div>
 </body>
