--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="container">
     <div class="grid">
       <div class="grid-item grid-item-one">1</div>
-      <div class="grid-item">2</div>
+      <div class="grid-item ">2</div>
       <div class="grid-item">3</div>
-      <div class="grid-item">4</div>
+      <div class="grid-item grid-item-four">4</div>
     </div>
   </div>
 </body>
