--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="grid-item grid-item-two">2</div>
       <div class="grid-item grid-item-three">3</div>
       <div class="grid-item grid-item-four">4</div>
+      <div class="grid-item grid-item-five">5</div>
     </div>
   </div>
 </body>
