--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <div class="grid-item grid-item-three">3</div>
       <div class="grid-item grid-item-four">4</div>
       <div class="grid-item grid-item-five">5</div>
+      <div class="grid-item">6</div>
+      <div class="grid-item">7</div>
+      <div class="grid-item">8</div>
+      <div class="grid-item">9</div>
     </div>
   </div>
 </body>
