--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
 <body>
   <div class="container">
     <div class="grid">
-      <div class="grid-item grid-item-one">1</div>
-      <div class="grid-item grid-item-two">2</div>
-      <div class="grid-item grid-item-three">3</div>
-      <div class="grid-item grid-item-four">4</div>
-      <div class="grid-item grid-item-five">5</div>
-      <div class="grid-item">6</div>
-      <div class="grid-item">7</div>
-      <div class="grid-item">8</div>
-      <div class="grid-item">9</div>
+      <div class="grid-item grid-item-one">header</div>
+      <div class="grid-item grid-item-two">content</div>
+      <div class="grid-item grid-item-three">sidebar</div>
+      <div class="grid-item grid-item-four">footer</div>
     </div>
   </div>
 </body>
